@startuml
interface CapteurAsync {
+ Future getValue()
}
interface Java.Future {

}
interface Java.MethodInvocation {

}
class Java.Scheduler {

}
class Canal {
+ Future update(c: Capteur)
}
class Afficheur {
}
class CapteurImpl {
+ Integer getValue()
}
interface Capteur {
+ Integer getValue()
}
class GetValue {
+ void call()
}


CapteurAsync <|.. Canal
Java.MethodInvocation <|.. GetValue
Capteur <|.. CapteurImpl

note "getValue: Active Object" as N1
Canal <.. N1 : Proxy
Afficheur <.. N1 : Client
Capteur <.. N1 : Servant
CapteurAsync <.. N1 : Service
Java.Future <.. N1 : Future
Java.MethodInvocation <.. N1 : MI
Java.Scheduler <.. N1 : Scheduler
CapteurImpl <.. N1 : ConcretServant
GetValue <.. N1 : ConcreteMI

@enduml